--- a/parts/aside.html
+++ b/parts/aside.html
@@ -1,7 +1,125 @@
-<!-- wp:group {"style":{"spacing":{"margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"padding":{"right":"0","left":"0","top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"blockGap":"var:preset|spacing|l"}},"layout":{"type":"constrained"}} -->
-<div class="wp-block-group" style="margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);padding-top:var(--wp--preset--spacing--none);padding-right:0;padding-bottom:var(--wp--preset--spacing--none);padding-left:0">
+<!-- wp:group {"layout":{"type":"constrained"}} -->
+<div class="wp-block-group">
 
-    <!-- wp:pattern {"slug":"slick/aside"} /-->
+    <!-- wp:columns -->
+    <div class="wp-block-columns">
+
+        <!-- wp:column {"width":"50%"} -->
+        <div class="wp-block-column" style="flex-basis:50%">
+
+            <!-- wp:group {"layout":{"type":"flex","orientation":"vertical","justifyContent":"stretch"}} -->
+            <div class="wp-block-group">
+
+                <!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|l","bottom":"var:preset|spacing|l","left":"var:preset|spacing|l","right":"var:preset|spacing|l"},"blockGap":"var:preset|spacing|l"}},"layout":{"type":"constrained"}} -->
+                <div class="wp-block-group" style="padding-top:var(--wp--preset--spacing--l);padding-right:var(--wp--preset--spacing--l);padding-bottom:var(--wp--preset--spacing--l);padding-left:var(--wp--preset--spacing--l)">
+
+                    <!-- wp:heading -->
+                    <h2 class="wp-block-heading">About</h2>
+                    <!-- /wp:heading -->
+
+                    <!-- wp:paragraph -->
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer commodo sapien nunc, sit amet mattis urna interdum at. Nam augue nibh, dapibus vel tempus ac, malesuada non neque. Curabitur quis pretium ex.</p>
+                    <!-- /wp:paragraph -->
+
+                    <!-- wp:paragraph -->
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer commodo sapien nunc, sit amet mattis urna interdum at. Nam augue nibh, dapibus vel tempus ac, malesuada non neque. Curabitur quis pretium ex.</p>
+                    <!-- /wp:paragraph -->
+
+                </div>
+                <!-- /wp:group -->
+
+            </div>
+            <!-- /wp:group -->
+
+        </div>
+        <!-- /wp:column -->
+
+        <!-- wp:column -->
+        <div class="wp-block-column">
+
+            <!-- wp:group {"layout":{"type":"flex","orientation":"vertical","justifyContent":"stretch"}} -->
+            <div class="wp-block-group">
+
+                <!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|l","bottom":"var:preset|spacing|l","left":"var:preset|spacing|l","right":"var:preset|spacing|l"},"blockGap":"var:preset|spacing|l"}},"layout":{"type":"constrained"}} -->
+                <div class="wp-block-group" style="padding-top:var(--wp--preset--spacing--l);padding-right:var(--wp--preset--spacing--l);padding-bottom:var(--wp--preset--spacing--l);padding-left:var(--wp--preset--spacing--l)">
+
+                    <!-- wp:heading -->
+                    <h2 class="wp-block-heading">Links</h2>
+                    <!-- /wp:heading -->
+
+                    <!-- wp:buttons {"style":{"spacing":{"blockGap":{"top":"var:preset|spacing|l"}}},"layout":{"type":"flex","orientation":"vertical"}} -->
+                    <div class="wp-block-buttons">
+
+                        <!-- wp:button {"className":"is-style-outline","style":{"border":{"width":"0px","style":"none"},"spacing":{"padding":{"left":"0","right":"0","top":"0","bottom":"0"}}}} -->
+                        <div class="wp-block-button is-style-outline"><a class="wp-block-button__link wp-element-button" href="#" style="border-style:none;border-width:0px;padding-top:0;padding-right:0;padding-bottom:0;padding-left:0">About</a></div>
+                        <!-- /wp:button -->
+
+                        <!-- wp:button {"className":"is-style-outline","style":{"border":{"width":"0px","style":"none"},"spacing":{"padding":{"left":"0","right":"0","top":"0","bottom":"0"}}}} -->
+                        <div class="wp-block-button is-style-outline"><a class="wp-block-button__link wp-element-button" href="#" style="border-style:none;border-width:0px;padding-top:0;padding-right:0;padding-bottom:0;padding-left:0">FAQs</a></div>
+                        <!-- /wp:button -->
+
+                        <!-- wp:button {"className":"is-style-outline","style":{"border":{"width":"0px","style":"none"},"spacing":{"padding":{"left":"0","right":"0","top":"0","bottom":"0"}}}} -->
+                        <div class="wp-block-button is-style-outline"><a class="wp-block-button__link wp-element-button" href="#" style="border-style:none;border-width:0px;padding-top:0;padding-right:0;padding-bottom:0;padding-left:0">Terms of Service</a></div>
+                        <!-- /wp:button -->
+
+                        <!-- wp:button {"className":"is-style-outline","style":{"border":{"width":"0px","style":"none"},"spacing":{"padding":{"left":"0","right":"0","top":"0","bottom":"0"}}}} -->
+                        <div class="wp-block-button is-style-outline"><a class="wp-block-button__link wp-element-button" href="#" style="border-style:none;border-width:0px;padding-top:0;padding-right:0;padding-bottom:0;padding-left:0">Privacy Policy</a></div>
+                        <!-- /wp:button -->
+
+                        <!-- wp:button {"className":"is-style-outline","style":{"border":{"width":"0px","style":"none"},"spacing":{"padding":{"left":"0","right":"0","top":"0","bottom":"0"}}}} -->
+                        <div class="wp-block-button is-style-outline"><a class="wp-block-button__link wp-element-button" href="#" style="border-style:none;border-width:0px;padding-top:0;padding-right:0;padding-bottom:0;padding-left:0">Contacts</a></div>
+                        <!-- /wp:button -->
+
+                    </div>
+                    <!-- /wp:buttons -->
+
+                </div>
+                <!-- /wp:group -->
+
+            </div>
+            <!-- /wp:group -->
+
+        </div>
+        <!-- /wp:column -->
+
+        <!-- wp:column -->
+        <div class="wp-block-column">
+
+            <!-- wp:group {"layout":{"type":"flex","orientation":"vertical","justifyContent":"stretch"}} -->
+            <div class="wp-block-group">
+
+                <!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|l","bottom":"var:preset|spacing|l","left":"var:preset|spacing|l","right":"var:preset|spacing|l"},"blockGap":"var:preset|spacing|l"}},"layout":{"type":"constrained"}} -->
+                <div class="wp-block-group" style="padding-top:var(--wp--preset--spacing--l);padding-right:var(--wp--preset--spacing--l);padding-bottom:var(--wp--preset--spacing--l);padding-left:var(--wp--preset--spacing--l)">
+
+                    <!-- wp:heading -->
+                    <h2 class="wp-block-heading">Social</h2>
+                    <!-- /wp:heading -->
+
+                    <!-- wp:social-links {"iconColor":"color-60","iconColorValue":"#5c5c5c","showLabels":true,"className":"is-style-logos-only","style":{"spacing":{"blockGap":{"top":"var:preset|spacing|l"}}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"left"}} -->
+                    <ul class="wp-block-social-links has-visible-labels has-icon-color is-style-logos-only">
+
+                        <!-- wp:social-link {"url":"#","service":"facebook"} /-->
+
+                        <!-- wp:social-link {"url":"#","service":"youtube"} /-->
+
+                        <!-- wp:social-link {"url":"#","service":"instagram"} /-->
+
+                        <!-- wp:social-link {"url":"#","service":"linkedin"} /-->
+
+                    </ul>
+                    <!-- /wp:social-links -->
+
+                </div>
+                <!-- /wp:group -->
+
+            </div>
+            <!-- /wp:group -->
+
+        </div>
+        <!-- /wp:column -->
+
+    </div>
+    <!-- /wp:columns -->
 
 </div>
 <!-- /wp:group -->
