--- a/parts/footer.html
+++ b/parts/footer.html
@@ -1,7 +1,33 @@
-<!-- wp:group {"style":{"spacing":{"margin":{"top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"padding":{"right":"0","left":"0","top":"var:preset|spacing|none","bottom":"var:preset|spacing|none"},"blockGap":"var:preset|spacing|l"}},"layout":{"type":"constrained"}} -->
-<div class="wp-block-group" style="margin-top:var(--wp--preset--spacing--none);margin-bottom:var(--wp--preset--spacing--none);padding-top:var(--wp--preset--spacing--none);padding-right:0;padding-bottom:var(--wp--preset--spacing--none);padding-left:0">
+<!-- wp:group {"layout":{"type":"constrained"}} -->
+<div class="wp-block-group">
 
-    <!-- wp:pattern {"slug":"slick/footer"} /-->
+    <!-- wp:columns -->
+    <div class="wp-block-columns">
+
+        <!-- wp:column -->
+        <div class="wp-block-column">
+
+            <!-- wp:group {"layout":{"type":"flex","orientation":"vertical","justifyContent":"stretch"}} -->
+            <div class="wp-block-group">
+
+                <!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|l","bottom":"var:preset|spacing|l","left":"var:preset|spacing|l","right":"var:preset|spacing|l"},"blockGap":"var:preset|spacing|l"}},"layout":{"type":"constrained"}} -->
+                <div class="wp-block-group" style="padding-top:var(--wp--preset--spacing--l);padding-right:var(--wp--preset--spacing--l);padding-bottom:var(--wp--preset--spacing--l);padding-left:var(--wp--preset--spacing--l)">
+
+                    <!-- wp:paragraph {"align":"center"} -->
+                    <p class="has-text-align-center">Built with <a href="https://www.slicktheme.it" data-type="link" data-id="https://www.slicktheme.it" target="_blank" rel="noreferrer noopener nofollow">Slick Theme</a></p>
+                    <!-- /wp:paragraph -->
+
+                </div>
+                <!-- /wp:group -->
+
+            </div>
+            <!-- /wp:group -->
+
+        </div>
+        <!-- /wp:column -->
+
+    </div>
+    <!-- /wp:columns -->
 
 </div>
 <!-- /wp:group -->
